feat: building the tests for the workflow_preprocess